FInalizando Layout Tablet

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="brand-area">Lawfirm Agency</p>
         </div>
       </div>
-      <div class="contact">
+      <div class="contact contact-left">
         <div class="box-image">
           <img src="./images/map.svg" alt="Map">
         </div>
@@ -31,7 +31,7 @@
           <p class="contact-description">Call us now 24/7 Customer Support</p>
         </div>
       </div>
-      <div class="contact">
+      <div class="contact contact-right">
         <div class="box-image">
           <img src="./images/plane.svg" alt="Paper Plane">
         </div>
@@ -192,7 +192,7 @@
           <h2 class="sub-white sub-white_left">We Have Great Results</h2>
           <p class="section-description section-description_left">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
         </div>
-        <div class="simple-card">
+        <div class="simple-card simple-card_form">
           <div class="simple-card_content simple-card_lighter">
             <div class="content-image content-image_lighter">
               <img src="./images/balance.svg" alt="Justice balance">
@@ -310,7 +310,7 @@
       <div class="reminder-content">
         <h2 class="reminder-title">Are You Facing Criminal Charges?</h2>
         <p class="reminder-sub"> We are waiting for your call</p>
-        <div class="reminder-button">
+        <div class="reminder-button  reminder-button_absolute">
           <a class="reminder-btn" href="#">Get in Touch</a>
         </div>
       </div>
@@ -418,6 +418,7 @@
   </main>
   <footer>
     <section class="footer-container">
+      <div class="logo-social">
       <div class="logo">
         <div class="image-logo">
           <img src="./images/balance.svg" alt="Justice Balance">
@@ -435,6 +436,7 @@
         <a href="#"><img src="./images/facebook.svg" alt="Facebook logo"></a>
         <a href="#"><img src="./images/instagram.svg" alt="Instagram logo"></a>
       </div>
+    </div>
       <div class="posts-container">
         <p class="nav-title">Recent Posts</p>
         <div class="simple-card simple-card_footer">
@@ -462,6 +464,7 @@
           </div>
         </div>
       </div>
+      <div class="sub-nav">
       <div class="footer-nav">
         <p class="nav-title">Explore</p>
         <div class="nav-links">
@@ -497,6 +500,7 @@
           </div>
         </div>
       </div>
+    </div>
       <div class="rights">
         <p class="copy">Copyright₢2024 All rights reserved | This template is made with ♥ by <a class="Colorlib-footer" href="#">Colorib</a></p>
       </div>
