--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="./JS/file.js"></script>
   <title>Atorni</title>
 </head>
 
@@ -55,17 +56,17 @@
       </div>
     </header>
     <nav class="navbar">
-      <button class="icon">
+      <button class="icon js-toggle-menu">
         <img src="./images/burger-menu-svgrepo-com.svg" alt="Hamburguer menu">
       </button>
       <ul class="navbar__list">
         <li><a class="top" href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Attorneys</a></li>
-        <li><a href="#">Practice Areas</a></li>
-        <li><a href="#">Cases</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#attorneys">Attorneys</a></li>
+        <li><a href="#practice_areas">Practice Areas</a></li>
+        <li><a href="#cases">Cases</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
       <button class="icon icon--search">
         <img src="./images/search.svg" alt="Magnifying Glass">
@@ -157,19 +158,19 @@
           </div>
         </div>
       </section>
-      <section class="section section--black">
+      <section class="section section--black" id="about">
         <div class="about__container">
           <div class="section__intro">
             <p class="section__intro__title">About Us</p>
             <h2 class="section__intro__subtitle section__intro__subtitle--white">80 Years Of Experience In Legal Solution</h2>
             <p class="section__description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
           </div>
-          <div class="about__image">
+          <div class="about__image" id="attorneys">
             <img src="./images/experience.webp" alt="Lawyer holding the justice balance">
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section" id="practice_areas">
         <div class="section__intro">
           <p class="section__intro__title">Practice Areas</p>
           <h2 class="section__intro__subtitle">What we cover</h2>
@@ -341,7 +342,7 @@
           </form>
         </div>
       </section>
-      <section class="section">
+      <section class="section" id="cases">
         <div class="section__intro">
           <p class="section__intro__title">Cases</p>
           <h2 class="section__intro__subtitle">Recent Case Studies</h2>
@@ -433,8 +434,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
-
+      <section class="section" id="news">
         <div class="section__intro">
           <p class="section__intro__title">Blog</p>
           <h2 class="section__intro__subtitle">Recent Blog</h2>
@@ -506,7 +506,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="contact">
       <section class="footer__container">
         <div class="social">
           <div class="social__logo">
@@ -525,9 +525,17 @@
           </div>
           <p class="social__text">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
           <div class="social__media">
-            <a href="#"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="800" height="800" viewBox="0 0 512 512"><path d="M459 152v13A296 296 0 0 1 1 417a212 212 0 0 0 155-44c-46-1-85-31-98-73a105 105 0 0 0 47-1c-48-10-84-52-84-103v-2c14 8 30 13 48 14A105 105 0 0 1 36 68c52 63 129 105 216 109A105 105 0 0 1 354 48c30 0 58 13 77 33 24-4 46-13 66-25-7 25-24 45-46 58 21-3 42-8 60-16-14 21-31 39-52 54z" style="display:inline"/></svg></a>
-            <a href="#"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="800" height="800" viewBox="0 0 310 310"><path d="M82 165h34v140c0 3 2 5 5 5h57c3 0 5-2 5-5V166h39c3 0 5-2 5-5l6-51a5 5 0 0 0-5-6h-45V72c0-10 6-15 16-15h29c3 0 5-2 5-5V5c0-3-2-5-5-5h-42c-7 0-32 1-51 19a53 53 0 0 0-18 48v37H82c-3 0-5 2-5 5v51c0 3 2 5 5 5z"/></svg></a>
-            <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="800" height="800" fill="none" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z" clip-rule="evenodd"/><path d="M18 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2Z"/><path fill-rule="evenodd" d="M1.65 4.28C1 5.56 1 7.24 1 10.6v2.8c0 3.36 0 5.04.65 6.32a6 6 0 0 0 2.63 2.63c1.28.65 2.96.65 6.32.65h2.8c3.36 0 5.04 0 6.32-.65a6 6 0 0 0 2.63-2.63c.65-1.28.65-2.96.65-6.32v-2.8c0-3.36 0-5.04-.65-6.32a6 6 0 0 0-2.63-2.63C18.44 1 16.76 1 13.4 1h-2.8c-3.36 0-5.04 0-6.32.65a6 6 0 0 0-2.63 2.63ZM13.4 3h-2.8c-1.71 0-2.88 0-3.78.08-.87.07-1.32.2-1.64.36a4 4 0 0 0-1.74 1.74c-.16.32-.3.77-.36 1.64C3 7.72 3 8.9 3 10.6v2.8c0 1.71 0 2.88.08 3.78.07.87.2 1.32.36 1.64a4 4 0 0 0 1.74 1.74c.32.16.77.3 1.64.36.9.08 2.07.08 3.78.08h2.8c1.71 0 2.88 0 3.78-.08.87-.07 1.32-.2 1.64-.36a4 4 0 0 0 1.74-1.74c.16-.32.3-.77.36-1.64.08-.9.08-2.07.08-3.78v-2.8c0-1.71 0-2.88-.08-3.78a4.32 4.32 0 0 0-.36-1.64 4 4 0 0 0-1.74-1.74 4.32 4.32 0 0 0-1.64-.36C16.28 3 15.1 3 13.4 3Z" clip-rule="evenodd"/></svg></a>
+            <a href="#"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="800" height="800" viewBox="0 0 512 512">
+                <path d="M459 152v13A296 296 0 0 1 1 417a212 212 0 0 0 155-44c-46-1-85-31-98-73a105 105 0 0 0 47-1c-48-10-84-52-84-103v-2c14 8 30 13 48 14A105 105 0 0 1 36 68c52 63 129 105 216 109A105 105 0 0 1 354 48c30 0 58 13 77 33 24-4 46-13 66-25-7 25-24 45-46 58 21-3 42-8 60-16-14 21-31 39-52 54z" style="display:inline" />
+              </svg></a>
+            <a href="#"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="800" height="800" viewBox="0 0 310 310">
+                <path d="M82 165h34v140c0 3 2 5 5 5h57c3 0 5-2 5-5V166h39c3 0 5-2 5-5l6-51a5 5 0 0 0-5-6h-45V72c0-10 6-15 16-15h29c3 0 5-2 5-5V5c0-3-2-5-5-5h-42c-7 0-32 1-51 19a53 53 0 0 0-18 48v37H82c-3 0-5 2-5 5v51c0 3 2 5 5 5z" />
+              </svg></a>
+            <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="800" height="800" fill="none" viewBox="0 0 24 24">
+                <path fill-rule="evenodd" d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z" clip-rule="evenodd" />
+                <path d="M18 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2Z" />
+                <path fill-rule="evenodd" d="M1.65 4.28C1 5.56 1 7.24 1 10.6v2.8c0 3.36 0 5.04.65 6.32a6 6 0 0 0 2.63 2.63c1.28.65 2.96.65 6.32.65h2.8c3.36 0 5.04 0 6.32-.65a6 6 0 0 0 2.63-2.63c.65-1.28.65-2.96.65-6.32v-2.8c0-3.36 0-5.04-.65-6.32a6 6 0 0 0-2.63-2.63C18.44 1 16.76 1 13.4 1h-2.8c-3.36 0-5.04 0-6.32.65a6 6 0 0 0-2.63 2.63ZM13.4 3h-2.8c-1.71 0-2.88 0-3.78.08-.87.07-1.32.2-1.64.36a4 4 0 0 0-1.74 1.74c-.16.32-.3.77-.36 1.64C3 7.72 3 8.9 3 10.6v2.8c0 1.71 0 2.88.08 3.78.07.87.2 1.32.36 1.64a4 4 0 0 0 1.74 1.74c.32.16.77.3 1.64.36.9.08 2.07.08 3.78.08h2.8c1.71 0 2.88 0 3.78-.08.87-.07 1.32-.2 1.64-.36a4 4 0 0 0 1.74-1.74c.16-.32.3-.77.36-1.64.08-.9.08-2.07.08-3.78v-2.8c0-1.71 0-2.88-.08-3.78a4.32 4.32 0 0 0-.36-1.64 4 4 0 0 0-1.74-1.74 4.32 4.32 0 0 0-1.64-.36C16.28 3 15.1 3 13.4 3Z" clip-rule="evenodd" />
+              </svg></a>
           </div>
         </div>
         <div class="posts__container">
@@ -565,11 +573,11 @@
           <div class="footer__nav__explore">
             <p class="nav__title">Explore</p>
             <ul class="footer__nav__explore__links">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Practice Areas</a></li>
-              <li><a href="#">Case Studies</a></li>
-              <li><a href="#">Attorneys</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#practice_areas">Practice Areas</a></li>
+              <li><a href="#cases">Case Studies</a></li>
+              <li><a href="#attorneys">Attorneys</a></li>
+              <li><a href="#news">Blog</a></li>
             </ul>
           </div>
           <div class="footer__nav__questions">
