--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="./JS/file.js"></script>
+  <script type="text/javascript" src="./form.js"></script>
   <title>Atorni</title>
 </head>
 
 <body>
+  <div class="backdrop"></div>
+  <div class="modal">
+    <h1>Do you want to continue?</h1>
+      <a href="#form" class="button button--primary affirmative">Yes!</a>
+      <button class="button button--primary negative" type="button">No!</button>
+  </div>
   <main>
     <header class="header">
       <div class="logo">
@@ -68,9 +75,6 @@
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <button class="icon icon--search">
-        <img src="./images/search.svg" alt="Magnifying Glass">
-      </button>
     </nav>
     <main>
       <section class="introduction">
@@ -79,7 +83,7 @@
             <h1>We Are Ready For a Fight Against Injustice</h1>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
           </div>
-          <a href="#"><button class="button button--primary button--big">Make an Appointment</button></a>
+          <button class="button button--primary button--big">Make an Appointment</button>
         </div>
       </section>
       <section class="section section--card">
@@ -304,7 +308,7 @@
             </div>
           </div>
         </div>
-        <div class="form__container">
+        <div class="form__container" id="form">
           <form class="form">
             <div class="form__intro">
               <p class="form__intro__title">Drop a message</p>
