Preparing content to live

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="./JS/file.js"></script>
   <script type="text/javascript" src="./JS/form.js"></script>
-  <title>Atorni</title>
+  <title>Advocacia Azevedo</title>
 </head>
 
 <body>
   <div class="backdrop"></div>
   <div class="modal">
     <h1>Do you want to continue?</h1>
-      <a href="#form" class="button button--primary affirmative">Yes!</a>
-      <button class="button button--primary negative" type="button">No!</button>
+    <a href="#form" class="button button--primary affirmative">Yes!</a>
+    <button class="button button--primary negative" type="button">No!</button>
   </div>
   <main>
     <header class="header">
@@ -31,8 +31,8 @@
           </g>
         </svg>
         <div class="brand">
-          <p class="brand__name">Atorni</p>
-          <p class="brand__area">Lawfirm Agency</p>
+          <p class="brand__name">Advocacia Azevedo</p>
+          <p class="brand__area">Advogado</p>
         </div>
       </div>
       <div class="contact contact--left">
@@ -46,8 +46,8 @@
           </svg>
         </div>
         <div class="contact__way">
-          <p class="contact__title">Free call<span> +1234 456 78910</span></p>
-          <p class="contact__description">Call us now 24/7 Customer Support</p>
+          <p class="contact__title">Entre em contato<span> (11) 1234-5678</span></p>
+          <p class="contact__description">Ligue ou mande mensagem no whatsapp</p>
         </div>
       </div>
       <div class="contact contact--right">
@@ -57,8 +57,8 @@
           </svg>
         </div>
         <div class="contact__way">
-          <p class="contact__title">Our Location</p>
-          <p class="contact__description">198 West 21th Street, Suite 721 New York Ny 10016</p>
+          <p class="contact__title">Onde estamos</p>
+          <p class="contact__description">Rua Sei que lá, número 123</p>
         </div>
       </div>
     </header>
@@ -67,23 +67,22 @@
         <img src="./images/burger-menu-svgrepo-com.svg" alt="Hamburguer menu">
       </button>
       <ul class="navbar__list">
-        <li><a class="top" href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#attorneys">Attorneys</a></li>
-        <li><a href="#practice_areas">Practice Areas</a></li>
-        <li><a href="#cases">Cases</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a class="top" href="#">Inicio</a></li>
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#attorneys">Advogado</a></li>
+        <li><a href="#practice_areas">Áreas de atuação</a></li>
+        <li><a href="#cases">Casos</a></li>
+        <li><a href="#contact">Contato</a></li>
       </ul>
     </nav>
     <main>
       <section class="introduction">
         <div class="introduction__container">
           <div class="introduction__title">
-            <h1>We Are Ready For a Fight Against Injustice</h1>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <h1>Defendendo seus direitos com determinação</h1>
+            <p>Oferecemos serviços jurídicos de alta qualidade com uma abordagem personalizada para atender às suas necessidades individuais e empresariais.</p>
           </div>
-          <button class="button button--primary button--big">Make an Appointment</button>
+          <button class="button button--primary button--big">Agende uma visita!</button>
         </div>
       </section>
       <section class="section section--card">
@@ -113,8 +112,8 @@
               </svg>
             </div>
             <div class="content">
-              <p class="content__title">1500</p>
-              <p class="content__description">Qualified Lawyers</p>
+              <p class="content__title">157</p>
+              <p class="content__description">Anos de experiência</p>
             </div>
           </div>
           <div class="simple-card">
@@ -129,7 +128,7 @@
             </div>
             <div class="content">
               <p class="content__title">2100</p>
-              <p class="content__description">Succesfull Cases</p>
+              <p class="content__description">Casos de sucesso</p>
             </div>
           </div>
           <div class="simple-card">
@@ -145,7 +144,7 @@
             </div>
             <div class="content">
               <p class="content__title">2700</p>
-              <p class="content__description">Happy Clients</p>
+              <p class="content__description">Clientes felizes</p>
             </div>
           </div>
           <div class="simple-card">
@@ -157,7 +156,7 @@
             </div>
             <div class="content">
               <p class="content__title">1010</p>
-              <p class="content__description">Awards & Honors</p>
+              <p class="content__description">Medalhas</p>
             </div>
           </div>
         </div>
@@ -165,9 +164,10 @@
       <section class="section section--black" id="about">
         <div class="about__container">
           <div class="section__intro">
-            <p class="section__intro__title">About Us</p>
-            <h2 class="section__intro__subtitle section__intro__subtitle--white">80 Years Of Experience In Legal Solution</h2>
-            <p class="section__description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p class="section__intro__title">Sobre mim</p>
+            <h2 class="section__intro__subtitle section__intro__subtitle--white">132 anos de experiência na área</h2>
+            <p class="section__description">Como advogado dedicado e comprometido com a excelência, a ética e a integridade, tenho orgulho em oferecer serviços jurídicos de alta qualidade para atender às necessidades dos meus clientes. Meu histórico de sucesso é uma prova do meu compromisso em alcançar os melhores resultados possíveis. Através de uma abordagem personalizada e focada no cliente, consistentemente supero as expectativas e alcanço resultados excepcionais. Minha dedicação à justiça e ao serviço público me torna um parceiro confiável na busca por soluções jurídicas eficazes. Seja qual for o seu desafio legal, estou aqui para ajudar.
+            </p>
           </div>
           <div class="about__image" id="attorneys">
             <img src="./images/experience.webp" alt="Lawyer holding the justice balance">
@@ -176,12 +176,12 @@
       </section>
       <section class="section" id="practice_areas">
         <div class="section__intro">
-          <p class="section__intro__title">Practice Areas</p>
-          <h2 class="section__intro__subtitle">What we cover</h2>
+          <p class="section__intro__title">Áreas de atuação</p>
+          <h2 class="section__intro__subtitle">Especialidades</h2>
         </div>
         <div class="cards__container">
           <div class="card">
-            <img class="card__image card__image--higher" src="./images/bank.webp" alt="Man working">
+            <img class="card__image" src="./images/bank.webp" alt="Man working">
             <div class="card__stamp">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                 <g data-name="balance justice">
@@ -193,8 +193,8 @@
               </svg>
             </div>
             <div class="card__text">
-              <p class="card__title">Bank & Financial</p>
-              <p class="card__description">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p class="card__title">Trabalhista</p>
+              <p class="card__description">Representação em casos de demissão injusta, irregularidades contratuais e demais tretas.</p>
             </div>
           </div>
           <div class="card">
@@ -210,8 +210,8 @@
               </svg>
             </div>
             <div class="card__text">
-              <p class="card__title">Personal Injury</p>
-              <p class="card__description">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p class="card__title">Direito Penal</p>
+              <p class="card__description">Defesa em Crimes Financeiros</p>
             </div>
           </div>
           <div class="card">
@@ -227,8 +227,8 @@
               </svg>
             </div>
             <div class="card__text">
-              <p class="card__title">Family Law</p>
-              <p class="card__description">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p class="card__title">Direito de Família</p>
+              <p class="card__description">Assistência em questões de divórcio, custódia, sucessões e pensão alimenticia.</p>
             </div>
           </div>
           <div class="card">
@@ -244,8 +244,8 @@
               </svg>
             </div>
             <div class="card__text">
-              <p class="card__title">Criminal Law</p>
-              <p class="card__description">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p class="card__title">Direito Penal</p>
+              <p class="card__description">Defesa em Crimes Financeiros</p>
             </div>
           </div>
         </div>
@@ -438,65 +438,6 @@
           </div>
         </div>
       </section>
-      <section class="section" id="news">
-        <div class="section__intro">
-          <p class="section__intro__title">Blog</p>
-          <h2 class="section__intro__subtitle">Recent Blog</h2>
-        </div>
-        <div class="cards__container">
-          <div class="card">
-            <img class="card__image" src="./images/post-1.webp" alt="Men working with laptops">
-            <div class="card__stamp card__stamp--upper">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-                <g data-name="balance justice">
-                  <path d="M34 13.7a1.07 1.07 0 0 1-.68-.23 2 2 0 0 0-2.55 0 1 1 0 0 1-1.73-.8v-2.48a3.26 3.26 0 0 1 1.08-2.43 2.86 2.86 0 0 1 2.2-.76A3 3 0 0 1 35 10v2.66a1.07 1.07 0 0 1-.61.95 1 1 0 0 1-.39.09Zm0-1ZM32 11a3.71 3.71 0 0 1 1 .13V10a1 1 0 0 0-.89-1 .88.88 0 0 0-.7.24 1.26 1.26 0 0 0-.41.94v.94a3.71 3.71 0 0 1 1-.12ZM34 49h-3.9a1.09 1.09 0 0 1-1.1-1V17.34a1.05 1.05 0 0 1 1.72-.81 2 2 0 0 0 2.55 0 1.05 1.05 0 0 1 1.73.8V48a1.09 1.09 0 0 1-1 1Zm-3-2h2V18.87a4 4 0 0 1-2 0ZM45 57H19a1 1 0 0 1-1-1v-1a4 4 0 0 1 4-4h20a4 4 0 0 1 4 4v1a1 1 0 0 1-1 1Zm-25-2h24a2 2 0 0 0-2-2H22a2 2 0 0 0-2 2Z" />
-                  <path d="M42 53H22a1 1 0 0 1-1-1 5 5 0 0 1 5-5h12a5 5 0 0 1 5 5 1 1 0 0 1-1 1Zm-18.83-2h17.66A3 3 0 0 0 38 49H26a3 3 0 0 0-2.83 2ZM32 19a4 4 0 0 1-2.67-1 4 4 0 0 1 0-5.95 4.08 4.08 0 0 1 5.33 0A4 4 0 0 1 32 19Zm0-6a2 2 0 0 0-2 2 2 2 0 0 0 .66 1.48 2 2 0 0 0 2.67 0A2 2 0 0 0 32 13Z" />
-                  <path d="M56 19H45.18a6.13 6.13 0 0 1-4.36-1.79 4.18 4.18 0 0 0-3-1.21H35a1 1 0 0 1 0-2h2.86a6.18 6.18 0 0 1 4.36 1.79 4.18 4.18 0 0 0 3 1.21H56a1 1 0 0 1 0 2ZM18.88 19H8a1 1 0 0 1 0-2h10.88a4.09 4.09 0 0 0 2.91-1.21A6.12 6.12 0 0 1 26.12 14H29a1 1 0 0 1 0 2h-2.88a4.09 4.09 0 0 0-2.91 1.21A6.12 6.12 0 0 1 18.88 19ZM49 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0ZM15 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0Z" />
-                  <path d="M22 39a1 1 0 0 1-.94-.67L15 21 8.94 38.33a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 22 39ZM56 39a1 1 0 0 1-.94-.67L49 21l-6.06 17.3a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 56 39Z" />
-                </g>
-              </svg>
-            </div>
-            <div class="card__text">
-              <p class="card__title">Main practice areas of the firm include admiralty</p>
-              <p class="card__description">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card__image" src="./images/post-2.webp" alt="Men adn Woman working">
-            <div class="card__stamp card__stamp--upper">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-                <g data-name="balance justice">
-                  <path d="M34 13.7a1.07 1.07 0 0 1-.68-.23 2 2 0 0 0-2.55 0 1 1 0 0 1-1.73-.8v-2.48a3.26 3.26 0 0 1 1.08-2.43 2.86 2.86 0 0 1 2.2-.76A3 3 0 0 1 35 10v2.66a1.07 1.07 0 0 1-.61.95 1 1 0 0 1-.39.09Zm0-1ZM32 11a3.71 3.71 0 0 1 1 .13V10a1 1 0 0 0-.89-1 .88.88 0 0 0-.7.24 1.26 1.26 0 0 0-.41.94v.94a3.71 3.71 0 0 1 1-.12ZM34 49h-3.9a1.09 1.09 0 0 1-1.1-1V17.34a1.05 1.05 0 0 1 1.72-.81 2 2 0 0 0 2.55 0 1.05 1.05 0 0 1 1.73.8V48a1.09 1.09 0 0 1-1 1Zm-3-2h2V18.87a4 4 0 0 1-2 0ZM45 57H19a1 1 0 0 1-1-1v-1a4 4 0 0 1 4-4h20a4 4 0 0 1 4 4v1a1 1 0 0 1-1 1Zm-25-2h24a2 2 0 0 0-2-2H22a2 2 0 0 0-2 2Z" />
-                  <path d="M42 53H22a1 1 0 0 1-1-1 5 5 0 0 1 5-5h12a5 5 0 0 1 5 5 1 1 0 0 1-1 1Zm-18.83-2h17.66A3 3 0 0 0 38 49H26a3 3 0 0 0-2.83 2ZM32 19a4 4 0 0 1-2.67-1 4 4 0 0 1 0-5.95 4.08 4.08 0 0 1 5.33 0A4 4 0 0 1 32 19Zm0-6a2 2 0 0 0-2 2 2 2 0 0 0 .66 1.48 2 2 0 0 0 2.67 0A2 2 0 0 0 32 13Z" />
-                  <path d="M56 19H45.18a6.13 6.13 0 0 1-4.36-1.79 4.18 4.18 0 0 0-3-1.21H35a1 1 0 0 1 0-2h2.86a6.18 6.18 0 0 1 4.36 1.79 4.18 4.18 0 0 0 3 1.21H56a1 1 0 0 1 0 2ZM18.88 19H8a1 1 0 0 1 0-2h10.88a4.09 4.09 0 0 0 2.91-1.21A6.12 6.12 0 0 1 26.12 14H29a1 1 0 0 1 0 2h-2.88a4.09 4.09 0 0 0-2.91 1.21A6.12 6.12 0 0 1 18.88 19ZM49 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0ZM15 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0Z" />
-                  <path d="M22 39a1 1 0 0 1-.94-.67L15 21 8.94 38.33a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 22 39ZM56 39a1 1 0 0 1-.94-.67L49 21l-6.06 17.3a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 56 39Z" />
-                </g>
-              </svg>
-            </div>
-            <div class="card__text">
-              <p class="card__title">Main practice areas of the firm include admiralty</p>
-              <p class="card__description">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card__image" src="./images/post-3.webp" alt="Men working">
-            <div class="card__stamp card__stamp--upper">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-                <g data-name="balance justice">
-                  <path d="M34 13.7a1.07 1.07 0 0 1-.68-.23 2 2 0 0 0-2.55 0 1 1 0 0 1-1.73-.8v-2.48a3.26 3.26 0 0 1 1.08-2.43 2.86 2.86 0 0 1 2.2-.76A3 3 0 0 1 35 10v2.66a1.07 1.07 0 0 1-.61.95 1 1 0 0 1-.39.09Zm0-1ZM32 11a3.71 3.71 0 0 1 1 .13V10a1 1 0 0 0-.89-1 .88.88 0 0 0-.7.24 1.26 1.26 0 0 0-.41.94v.94a3.71 3.71 0 0 1 1-.12ZM34 49h-3.9a1.09 1.09 0 0 1-1.1-1V17.34a1.05 1.05 0 0 1 1.72-.81 2 2 0 0 0 2.55 0 1.05 1.05 0 0 1 1.73.8V48a1.09 1.09 0 0 1-1 1Zm-3-2h2V18.87a4 4 0 0 1-2 0ZM45 57H19a1 1 0 0 1-1-1v-1a4 4 0 0 1 4-4h20a4 4 0 0 1 4 4v1a1 1 0 0 1-1 1Zm-25-2h24a2 2 0 0 0-2-2H22a2 2 0 0 0-2 2Z" />
-                  <path d="M42 53H22a1 1 0 0 1-1-1 5 5 0 0 1 5-5h12a5 5 0 0 1 5 5 1 1 0 0 1-1 1Zm-18.83-2h17.66A3 3 0 0 0 38 49H26a3 3 0 0 0-2.83 2ZM32 19a4 4 0 0 1-2.67-1 4 4 0 0 1 0-5.95 4.08 4.08 0 0 1 5.33 0A4 4 0 0 1 32 19Zm0-6a2 2 0 0 0-2 2 2 2 0 0 0 .66 1.48 2 2 0 0 0 2.67 0A2 2 0 0 0 32 13Z" />
-                  <path d="M56 19H45.18a6.13 6.13 0 0 1-4.36-1.79 4.18 4.18 0 0 0-3-1.21H35a1 1 0 0 1 0-2h2.86a6.18 6.18 0 0 1 4.36 1.79 4.18 4.18 0 0 0 3 1.21H56a1 1 0 0 1 0 2ZM18.88 19H8a1 1 0 0 1 0-2h10.88a4.09 4.09 0 0 0 2.91-1.21A6.12 6.12 0 0 1 26.12 14H29a1 1 0 0 1 0 2h-2.88a4.09 4.09 0 0 0-2.91 1.21A6.12 6.12 0 0 1 18.88 19ZM49 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0ZM15 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0Z" />
-                  <path d="M22 39a1 1 0 0 1-.94-.67L15 21 8.94 38.33a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 22 39ZM56 39a1 1 0 0 1-.94-.67L49 21l-6.06 17.3a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 56 39Z" />
-                </g>
-              </svg>
-            </div>
-            <div class="card__text">
-              <p class="card__title">Main practice areas of the firm include admiralty</p>
-              <p class="card__description">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="reminder">
         <div class="overlay"></div>
         <div class="reminder__content reminder__content--center">
@@ -524,8 +465,8 @@
                 </g>
               </svg>
             </div>
-            <p class="social__brand__name">Atorni</p>
-            <p class="social__brand__area">Lawfirm Agency</p>
+            <p class="social__brand__name">Advocacia Azevedo</p>
+            <p class="social__brand__area">Advogado</p>
           </div>
           <p class="social__text">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
           <div class="social__media">
@@ -581,7 +522,6 @@
               <li><a href="#practice_areas">Practice Areas</a></li>
               <li><a href="#cases">Case Studies</a></li>
               <li><a href="#attorneys">Attorneys</a></li>
-              <li><a href="#news">Blog</a></li>
             </ul>
           </div>
           <div class="footer__nav__questions">
