Makes the menu sticky

--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
         <img src="./images/burger-menu-svgrepo-com.svg" alt="Hamburguer menu">
       </button>
       <ul class="navbar__list">
-        <li><a class="top" href="#">Inicio</a></li>
+        <li><a href="#">Inicio</a></li>
         <li><a href="#about">Sobre</a></li>
-        <li><a href="#attorneys">Advogado</a></li>
         <li><a href="#practice_areas">Áreas de atuação</a></li>
         <li><a href="#cases">Casos</a></li>
         <li><a href="#contact">Contato</a></li>
@@ -169,7 +168,7 @@
             <p class="section__description">Como advogado dedicado e comprometido com a excelência, a ética e a integridade, tenho orgulho em oferecer serviços jurídicos de alta qualidade para atender às necessidades dos meus clientes. Meu histórico de sucesso é uma prova do meu compromisso em alcançar os melhores resultados possíveis. Através de uma abordagem personalizada e focada no cliente, consistentemente supero as expectativas e alcanço resultados excepcionais. Minha dedicação à justiça e ao serviço público me torna um parceiro confiável na busca por soluções jurídicas eficazes. Seja qual for o seu desafio legal, estou aqui para ajudar.
             </p>
           </div>
-          <div class="about__image" id="attorneys">
+          <div class="about__image">
             <img src="./images/experience.webp" alt="Lawyer holding the justice balance">
           </div>
         </div>
@@ -521,7 +520,6 @@
               <li><a href="#about">About</a></li>
               <li><a href="#practice_areas">Practice Areas</a></li>
               <li><a href="#cases">Case Studies</a></li>
-              <li><a href="#attorneys">Attorneys</a></li>
             </ul>
           </div>
           <div class="footer__nav__questions">
