Shrinks mobile navbar

--- a/index.html
+++ b/index.html
@@ -63,9 +63,25 @@
       </div>
     </header>
     <nav class="navbar">
-      <button class="icon js-toggle-menu">
-        <img src="./images/burger-menu-svgrepo-com.svg" alt="Hamburguer menu">
-      </button>
+      <div class="mobile-navbar">
+        <button class="icon js-toggle-menu">
+          <img src="./images/burger-menu-svgrepo-com.svg" alt="Hamburguer menu">
+        </button>
+        <div class="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+            <g data-name="balance justice">
+              <path d="M34 13.7a1.07 1.07 0 0 1-.68-.23 2 2 0 0 0-2.55 0 1 1 0 0 1-1.73-.8v-2.48a3.26 3.26 0 0 1 1.08-2.43 2.86 2.86 0 0 1 2.2-.76A3 3 0 0 1 35 10v2.66a1.07 1.07 0 0 1-.61.95 1 1 0 0 1-.39.09Zm0-1ZM32 11a3.71 3.71 0 0 1 1 .13V10a1 1 0 0 0-.89-1 .88.88 0 0 0-.7.24 1.26 1.26 0 0 0-.41.94v.94a3.71 3.71 0 0 1 1-.12ZM34 49h-3.9a1.09 1.09 0 0 1-1.1-1V17.34a1.05 1.05 0 0 1 1.72-.81 2 2 0 0 0 2.55 0 1.05 1.05 0 0 1 1.73.8V48a1.09 1.09 0 0 1-1 1Zm-3-2h2V18.87a4 4 0 0 1-2 0ZM45 57H19a1 1 0 0 1-1-1v-1a4 4 0 0 1 4-4h20a4 4 0 0 1 4 4v1a1 1 0 0 1-1 1Zm-25-2h24a2 2 0 0 0-2-2H22a2 2 0 0 0-2 2Z" />
+              <path d="M42 53H22a1 1 0 0 1-1-1 5 5 0 0 1 5-5h12a5 5 0 0 1 5 5 1 1 0 0 1-1 1Zm-18.83-2h17.66A3 3 0 0 0 38 49H26a3 3 0 0 0-2.83 2ZM32 19a4 4 0 0 1-2.67-1 4 4 0 0 1 0-5.95 4.08 4.08 0 0 1 5.33 0A4 4 0 0 1 32 19Zm0-6a2 2 0 0 0-2 2 2 2 0 0 0 .66 1.48 2 2 0 0 0 2.67 0A2 2 0 0 0 32 13Z" />
+              <path d="M56 19H45.18a6.13 6.13 0 0 1-4.36-1.79 4.18 4.18 0 0 0-3-1.21H35a1 1 0 0 1 0-2h2.86a6.18 6.18 0 0 1 4.36 1.79 4.18 4.18 0 0 0 3 1.21H56a1 1 0 0 1 0 2ZM18.88 19H8a1 1 0 0 1 0-2h10.88a4.09 4.09 0 0 0 2.91-1.21A6.12 6.12 0 0 1 26.12 14H29a1 1 0 0 1 0 2h-2.88a4.09 4.09 0 0 0-2.91 1.21A6.12 6.12 0 0 1 18.88 19ZM49 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0ZM15 46a8 8 0 0 1-8-8 1 1 0 0 1 1-1h14a1 1 0 0 1 1 1 8 8 0 0 1-8 8Zm-5.92-7a6 6 0 0 0 11.84 0Z" />
+              <path d="M22 39a1 1 0 0 1-.94-.67L15 21 8.94 38.33a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 22 39ZM56 39a1 1 0 0 1-.94-.67L49 21l-6.06 17.3a1 1 0 0 1-1.88-.66l7-20a1 1 0 0 1 1.88 0l7 20a1 1 0 0 1-.61 1.27A1 1 0 0 1 56 39Z" />
+            </g>
+          </svg>
+          <div class="brand">
+            <p class="brand__name">Advocacia Azevedo</p>
+            <p class="brand__area">Advogado</p>
+          </div>
+        </div>
+      </div>
       <ul class="navbar__list">
         <li><a href="#">Inicio</a></li>
         <li><a href="#about">Sobre</a></li>
