Makes buttons bigger on mobile

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <h2 class="reminder__title">Are You Facing Criminal Charges?</h2>
             <p class="reminder__sub"> We are waiting for your call</p>
           </div>
-          <a href="#"><button class="button button--secondary">Get in Touch</button></a>
+          <button class="button button--secondary">Get in Touch</button>
         </div>
       </section>
       <section class="section">
@@ -460,8 +460,8 @@
             <h2 class="reminder__title">Need Legal Advicer?</h2>
           </div>
           <div class="reminder__buttons">
-            <a href="#"><button class="button button--secondary">0-1230-456-7890</button></a>
-            <a href="#"><button class="button button--tertiary">YOUREMAIL@EMAIL.COM</button></a>
+            <button class="button button--secondary">0-1230-456-7890</button>
+            <button class="button button--tertiary">YOUREMAIL@EMAIL.COM</button>
           </div>
         </div>
       </section>
