--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
       </ul>
     </nav>
     <main>
+      <button class=" button float-button">
+       <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="30" height="30" viewBox="0 0 512 512"><path d="m0 512 35.31-128C12.36 344.28 0 300.14 0 254.23 0 114.76 114.76 0 255.12 0S512 114.76 512 254.23 395.48 512 255.12 512c-44.14 0-86.51-14.12-124.47-35.31L0 512z" style="fill:#ededed"/><path d="m137.71 430.79 7.95 4.41c32.66 20.3 70.62 32.66 110.34 32.66 115.64 0 211.86-96.22 211.86-213.63s-96.22-210.1-212.74-210.1-210.98 93.58-210.98 210.1c0 40.61 11.47 80.34 32.66 113.88l5.3 7.95-20.3 74.15 75.91-19.42z"/><path d="m187.15 135.94-16.78-.88c-5.3 0-10.59 1.77-14.12 5.3-7.95 7.06-21.19 20.3-24.72 37.96-6.18 26.48 3.53 58.26 26.49 90.04s67.09 82.98 144.77 105.05c24.71 7.06 44.14 2.64 60.03-7.07a52.08 52.08 0 0 0 22.95-33.54l2.65-12.36c.88-3.53-.89-7.94-4.42-9.7l-55.61-25.6a8.42 8.42 0 0 0-10.6 2.64l-22.06 28.25c-1.77 1.76-4.42 2.65-7.07 1.76-15-5.3-65.32-26.48-92.69-79.45-.88-2.64-.88-5.3.89-7.06l21.18-23.83c1.77-2.65 2.65-6.18 1.77-8.83l-25.6-57.38c-.89-2.65-3.53-5.3-7.06-5.3" style="fill:#fefefe"/></svg>
+        <h3>Entre em Contato</h3>
+      </button>
       <section class="introduction">
         <div class="introduction__container">
           <div class="introduction__title">
@@ -423,7 +427,7 @@
         <div class="customer__container">
           <div class="card__customer">
             <div class="customer__info">
-              <img src="./images/customer-1.webp">
+              <img src="./images/customer-1.webp" alt="Roger Scott">
               <div class="badge">
                 <p class="badge__name">Roger Scott</p>
                 <p class="badge__post">Marketing Manager</p>
@@ -433,7 +437,7 @@
           </div>
           <div class="card__customer">
             <div class="customer__info">
-              <img src="./images/customer-2.webp">
+              <img src="./images/customer-2.webp" alt="Roger Scott">
               <div class="badge">
                 <p class="badge__name">Roger Scott</p>
                 <p class="badge__post">Marketing Manager</p>
@@ -443,7 +447,7 @@
           </div>
           <div class="card__customer">
             <div class="customer__info">
-              <img src="./images/customer-3.webp">
+              <img src="./images/customer-3.webp" alt="Roger Scott">
               <div class="badge">
                 <p class="badge__name">Roger Scott</p>
                 <p class="badge__post">Marketing Manager</p>
